--- a/src/pages/ManagePage/AddPatientForm.css
+++ b/src/pages/ManagePage/AddPatientForm.css
@@ -5,11 +5,17 @@
 }
 
 .add_patient_text{
+    height: 50px;
+    width: 400px;
     margin-top: 40px;
+    text-align: left;
     margin-bottom: 40px;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 30px;
     font-weight: 600;
-    color: #333333;
+    color: #496BF5;
 }
 
 /*.add_patient_boxes{*/
@@ -35,6 +41,13 @@
     font-size: 15px;
     border: 1px solid white;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.add_patient_id input:hover, .add_patient_name input:hover, .add_patient_age input:hover, .add_patient_sex select:hover,
+.add_patient_phone_num input:hover, .add_patient_email input:hover, .add_patient_managerid input:hover,
+.add_patient_emergency_num input:hover, .add_patient_address input:hover{
+    border: 3px solid #496BF5;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .add_patient_yesbtn button {
@@ -65,6 +78,7 @@
 .add_patient_button {
     display: flex;
     justify-content: center;
+    margin-top: 20px;
 }
 
 .add_patient_button button:hover{
