--- a/src/pages/NoticePage/EmergencyAlert.css
+++ b/src/pages/NoticePage/EmergencyAlert.css
@@ -69,10 +69,10 @@
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
-@keyframes blink-animation {
-    0%, 100% { background-color: white; }
-    50% { background-color: red; }
-}
+/*@keyframes blink-animation {*/
+/*    0%, 100% { background-color: white; }*/
+/*    50% { background-color: red; }*/
+/*}*/
 
 @keyframes blink-overlay-animation {
     0%, 100% { background: rgba(0, 0, 0, 0.5); }
