--- a/src/pages/MainPage/MiniPatientboard.css
+++ b/src/pages/MainPage/MiniPatientboard.css
@@ -9,8 +9,12 @@
     width: 420px;
     margin-left: 30px;
     margin-top: 50px;
+    padding-left: 40px;
     border-radius: 16px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .minipatientboard_box:hover{
@@ -18,14 +22,16 @@
 }
 
 .minipatientboard_list{
-    /*padding-top: 20px;*/
-    /*padding-right: 230px;*/
-    /*font-size: 30px;*/
-    /*color: #333333;*/
-    /*font-weight: 600;*/
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+}
+
+.minipatientboard_title{
+    padding-top: 20px;
+    font-size: 30px;
+    color: #333333;
+    font-weight: 600;
 }
 
 .minidashboard_name{
